--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 env/
 results/checkpoint-441/model.safetensors
 results/checkpoint-441/optimizer.pt
+results/scheduler.ptresults/trainer_state.json
+results/training_args.bin
